# StructuriDeDateGenerice

./: CMakeLists.txt  arboreBinar.h  arboreExpresii.h  arboreFisier.h  arboreGenealogic.h  arboreGeneric.h  arboriIerarhie.h  exercitiiArboriBinari.h  exercitiiBac.h  list.h  main.cpp  probleme.h  que.h  sistemTicketing.h  stiva.h  temaBac.h
