cmake_minimum_required(VERSION 3.29)
project(StructuriDeDateGenerice)

set(CMAKE_CXX_STANDARD 20)

add_executable(StructuriDeDateGenerice main.cpp
        list.h
        que.h
        stiva.h
        probleme.h
        sistemTicketing.h
        exercitiiBac.h
        arboriIerarhie.h
        arboreFisier.h
        arboreGenealogic.h
        arboreExpresii.h
        arboreBinar.h
)
